--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,11 @@
+version: '3.8'
 services:
-  deep-research:
-    container_name: deep-research
+  app:
+    container_name: deep_research
     build: .
-    env_file:
-      - .env.local
     volumes:
-      -  ./:/app/
+      - ./:/app/
+    working_dir: /app
     tty: true
     stdin_open: true
+    command: sh -c "npm install && sh"
