--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "tsx": "tsx --env-file=.env.local",
     "start": "tsx --env-file=.env.local src/run.ts",
     "docker": "tsx src/run.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "tsx --env-file=.env.local src/run.ts",
   },
   "author": "",
   "license": "ISC",
