--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "tsx": "tsx --env-file=.env.local",
     "start": "tsx --env-file=.env.local src/run.ts",
     "docker": "tsx src/run.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
-    "input": "tsx --env-file=.env.local src/input.ts",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "input": "tsx --env-file=.env.local src/input.ts"
   },
   "author": "",
   "license": "ISC",
