--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,4 +7,6 @@ services:
     working_dir: /app
     tty: true
     stdin_open: true
+    ports:
+      - "8777:8777"
     command: sh -c "npm install && sh"
